Fixed nav-bar title link alignment.

--- a/style.css
+++ b/style.css
@@ -151,6 +151,9 @@ body {
 }
 
 .nav-title {
+    display: flex;
+    align-items: center;
+    height: 100%;
     z-index: 10;
 }
 
@@ -158,7 +161,7 @@ body {
     color: rgb(0, 0, 0);
     font-size: 1.2rem;
     text-transform: uppercase;
-    margin: 5px 0 0 15px;
+    margin: 0 0 0 15px;
     transition: opacity 0.2s ease-in-out, transform 0.2s ease;
     opacity: 1;
     text-decoration: none;
@@ -181,10 +184,13 @@ body {
 
 nav[aria-label="Top Bar Navigation"] {
     position: absolute;
+    inset: 0 0 0 0;
     display: flex;
+    align-items: center;
     justify-content: flex-end;
     list-style-type: none;
     width: 100%;
+    height: 100%;
     opacity: 1;
     visibility: visible;
     transition: all 0.2s ease-in-out;
@@ -204,10 +210,10 @@ nav[aria-label="Top Bar Navigation"].transparent {
 
 nav[aria-label="Top Bar Navigation"] .nav-links {
     margin: 0;
-    padding: 0;
+    padding: 0 15px 0 0;
     text-align: right;
-    top: 50%;
-    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
 }
 
 .nav-links {
